--- a/public/index.html
+++ b/public/index.html
@@ -26,7 +26,7 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
-    <title>Kai Wu</title>
+    <title>Kai Wu | Developer and Photographer</title>
   </head>
   <body oncontextmenu="return false;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
